[project]
name = "postman-pypnmapps-api-tools"
version = "0.1.0"
description = "Local tooling for Postman PyPNMApps API repository sanitization tasks"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
