[project]
name = "postman-pypnmapps-api-tools"
version = "0.1.12"
description = "Local tooling for Postman PyPNMApps API repository sanitization tasks"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["mkdocs>=1.6", "mkdocs-material>=9.5", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
